Color swatch fixed on mobiles

--- a/assets/styles/styleguide/organisms/sg-entry-colors.scss
+++ b/assets/styles/styleguide/organisms/sg-entry-colors.scss
@@ -12,7 +12,7 @@
         figure {
           @include flex-item;
           background: red;
-          width: $lem * 5;
+          min-width: $lem * 5; // simple 'width' doesn't works on mobiles
         }
         
         aside {
